--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "tinycolor2": "^1.5.2"
   },
   "scripts": {
     "start": "node server/server.js",
