--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
