--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "sweetalert2": "^11.6.16",
+    "tesseract.js": "^4.0.2",
     "tinycolor2": "^1.5.2"
   },
   "scripts": {
