--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^5.11.3",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.1.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "cookie-session": "^2.0.0",
     "date-fns": "^2.29.3",
     "dotenv": "^8.6.0",
